minikube/coupled-services-example/coupled-services-example2/deployment.patch.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: coupled-services-example2
spec:
  template:
    spec:
      containers:
        - name: app
          resources:
            requests:
              cpu: 500m
