minikube/coupled-services-example/coupled-services-example2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coupled-services-example2
spec:
  ingressClassName: ingress
  rules:
    - host: sigma-example.kimae.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coupled-services-example2
                port:
                  name: http
